--- a/Magazine Hashtag/index.html
+++ b/Magazine Hashtag/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
-	<section id="carrinho" class="fixed top-0 right-[0px] bg-indigo-950 text-slate-200 h-screen w-[360px]">
+<body class="bg-stone-200 flex flex-col">
+	<section id="carrinho" class="fixed top-0 right-[-360px] bg-slate-950 text-slate-200 h-screen w-[360px] z-50">
 		<div id="cabecalho-carrinho" class="flex justify-between m-4">
 			<p>Meu Carrinho</p>
 			<button id="fechar-carrinho"><i class="fa-solid fa-circle-xmark"></i></button>
@@ -21,16 +21,19 @@
 		<p id="preco-total">$200</p>
 		<button class="bg-slate-200 text-slate-900 p-1">Finalizar Compra</button>
 	</section>
-	<header class="flex justify-between bg-indigo-950 p-2">
+
+	<header class="flex justify-between bg-slate-950 px-8 py-4 sticky top-0 shadow-xl shadow-slate-400 text-xl">
 		<img class="h-16" src="./assets/logo/hashtag.svg" alt="Logo do Magazine Hashtag">
 		<div class="flex items-end text-slate-200 gap-2 mx-2">
-			<button id="abrir-carrinho"><i class="fa-solid fa-cart-shopping"></i></button>
-			<button><i class="fa-solid fa-user"></i></button>
+			<button id="abrir-carrinho" class="mx-2"><i class="fa-solid fa-cart-shopping"></i></button>
+			<button class="mr-2"><i class="fa-solid fa-user"></i></button>
 		</div>
 	</header>
+
 	<main>
-		<section id="container-produto" class="flex flex-wrap"></section>
+		<section id="container-produto" class="flex flex-wrap p-10 justify-center gap-10"></section>
 	</main>
+
 	<script type="module" src="./main.js"></script>
 </body>
 </html>
