--- a/Magazine Hashtag/index.html
+++ b/Magazine Hashtag/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="bg-stone-200 flex flex-col">
-	<section id="carrinho" class="fixed top-0 right-[-360px] bg-slate-950 text-slate-200 h-screen w-[360px] z-50">
+	<section id="carrinho" class="fixed top-0 right-[-360px] bg-slate-950 text-slate-200 h-screen w-[360px] z-50 duration-200 border-l border-slate-200 p-5">
 		<div id="cabecalho-carrinho" class="flex justify-between m-4">
 			<p>Meu Carrinho</p>
 			<button id="fechar-carrinho"><i class="fa-solid fa-circle-xmark"></i></button>
